--- a/articles/azure-monitor/index.yml
+++ b/articles/azure-monitor/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 5b8d5e639711b91d380b5f14de48be6a80fb0263
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
+ms.openlocfilehash: d0fbabdae9b560a882bd4681eb9e681fd2a0398a
+ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54820775"
+ms.lasthandoff: 01/28/2019
+ms.locfileid: "55101778"
 documentType: LandingData
 title: Dokumentation om Azure Monitor
 metadata:
@@ -16,7 +16,7 @@ metadata:
   ms.service: azure-monitor
   ms.tgt_pltfrm: na
   ms.topic: landing-page
-  ms.date: 01/22/2019
+  ms.date: 01/25/2019
   ms.author: bwren
 abstract:
   description: Azure Monitor, vilket nu innefattar Log Analytics och Application Insights, innehåller avancerade verktyg för att samla in och analysera telemetri som gör det möjligt att maximera prestanda och tillgänglighet för dina molnresurser och lokala resurser och program. Det hjälper dig att förstå hur dina program fungerar och identifierar proaktivt problem som påverkar dem och de resurser som de förlitar sig på.
@@ -63,7 +63,7 @@ sections:
       text: Granskning och aviseringar för prenumeration
       href: /azure/monitoring-and-diagnostics/monitor-quick-audit-notify-action-in-subscription
   - type: paragraph
-    text: Lär dig att övervaka ditt program med Azure Application Insights.
+    text: Lär dig att övervaka ditt program med Azure Monitor Application Insights.
   - type: list
     style: icon48
     items:
