--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -634,18 +634,14 @@ items:
         href: platform/view-designer-parts.md
       - name: Filter
         href: platform/view-designer-filters.md
-    - name: Instrumentpaneler
-      items:
-      - name: Logs
-        href: platform/dashboards.md
-      - name: Program
-        href: app/app-insights-dashboards.md
     - name: Power BI
       items:
       - name: Exportera loggdata
         href: platform/powerbi.md
       - name: Exportera programdata
         href: app/export-power-bi.md
+    - name: Instrumentpaneler
+      href: app/app-insights-dashboards.md
     - name: Skicka data till Grafana
       href: platform/grafana-plugin.md
   - name: Analysera data
@@ -969,7 +965,7 @@ items:
   - name: Scheman
     items:
     - name: Tjänster, kategorier och scheman för diagnostikloggar
-      href: platform/tutorial-dashboards.md
+      href: platform/diagnostic-logs-schema.md
     - name: Händelseschema för aktivitetslogg
       href: platform/activity-log-schema.md
     - name: Schema för Azure Diagnostics-tillägg
@@ -991,6 +987,8 @@ items:
       href: platform/alerts-extend.md
     - name: Kopiera aviseringar från OMS-portalen till Azure Portal
       href: platform/alerts-extend-tool.md
+    - name: Växla API-inställning för loggaviseringar
+      href: platform/alerts-log-api-switch.md
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -1021,9 +1019,9 @@ items:
     href: https://stackoverflow.com/search?q=monitoring
   - name: Kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=monitor
-ms.openlocfilehash: adf92fafe1c1c0fa855d3658c41dd3563d4b26b2
-ms.sourcegitcommit: 9b6492fdcac18aa872ed771192a420d1d9551a33
+ms.openlocfilehash: 8c78f79b08b389f7570d1a726e5ffcaef56bdfa3
+ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54448694"
+ms.lasthandoff: 01/28/2019
+ms.locfileid: "55104612"
