--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -111,6 +111,11 @@ items:
     - name: Kräv kryptering för Data Lake Store
       displayName: deny
       href: samples/enforce-data-lake-store-encryption.md
+  - name: Nyckelvalv
+    items:
+    - name: Granska valv där slutpunkter i virtuella nätverk saknas
+      displayName: audit, KeyVault, indexed
+      href: samples/keyvault-no-vnet-rules.md
   - name: Övervakning
     items:
     - name: Granska diagnostikinställning
@@ -319,9 +324,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: UserVoice
     href: https://feedback.azure.com/forums/915958-azure-governance
-ms.openlocfilehash: aa053ca84c1c39ca1f4fd9c89b69030b2b8321b6
-ms.sourcegitcommit: 8115c7fa126ce9bf3e16415f275680f4486192c1
+ms.openlocfilehash: 75d384a6e8a7e5592b2b5d37948d7863a41d5f78
+ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54854300"
+ms.lasthandoff: 01/28/2019
+ms.locfileid: "55102659"
