--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -18,7 +18,7 @@ items:
   - name: Nyheter
     href: whats-new.md
   expanded: true
-- name: Kom igång
+- name: Självstudier
   items:
   - name: Skapa ditt första experiment
     displayName: quickstart
@@ -41,6 +41,16 @@ items:
     - name: 6 – Få åtkomst till webbtjänsten
       displayName: consume
       href: walkthrough-6-access-web-service.md
+  - name: Komma ingång i R
+    href: r-quickstart.md
+- name: Exempel
+  items:
+  - name: Tillgängliga datauppsättningar
+    href: use-sample-datasets.md
+  - name: Azure AI-galleriet
+    href: gallery-how-to-use-contribute-publish.md
+- name: Begrepp
+  items:
   - name: Datavetenskap för nybörjare
     items:
     - name: 1 – Fem frågor
@@ -53,19 +63,6 @@ items:
       href: data-science-for-beginners-predict-an-answer-with-a-simple-model.md
     - name: 5 – Kopiera andras arbete
       href: data-science-for-beginners-copy-other-peoples-work-to-do-data-science.md
-  - name: R-snabbstart
-    href: r-quickstart.md
-- name: Exempel
-  items:
-  - name: Exempelexperiment
-    displayName: gallery
-    href: sample-experiments.md
-  - name: Exempeldatauppsättningar
-    href: use-sample-datasets.md
-  - name: Azure AI-galleriet
-    href: gallery-how-to-use-contribute-publish.md
-- name: Begrepp
-  items:
   - name: Modellhantering
     displayName: deploy, consume, web service
     href: deploy-consume-web-service-guide.md
@@ -103,6 +100,9 @@ items:
     - name: Använda PowerShell för att skapa modeller
       displayName: endpoint, endpoints
       href: create-models-and-endpoints-with-powershell.md
+    - name: Prova experiment i AI Gallery
+      displayName: gallery
+      href: sample-experiments.md
     - name: Välja algoritmer
       href: algorithm-choice.md
     - name: Algoritmfacit
@@ -200,16 +200,12 @@ items:
   items:
   - name: Algoritm- och modulreferens
     href: https://msdn.microsoft.com/library/azure/dn905974.aspx
-  - name: Azure PowerShell-modul (ny)
-    href: https://docs.microsoft.com/powershell/module/azurerm.machinelearning
-  - name: Azure PowerShell-modul (klassisk)
+  - name: Azure PowerShell-moduler
     href: powershell-module.md
   - name: Felkoder för webbtjänst
     href: web-service-error-codes.md
   - name: 'Hantering av REST API: er'
     href: /rest/api/machinelearning
-  - name: Resource Manager-mall
-    href: /azure/templates/microsoft.machinelearning/allversions
 - name: Resurser
   items:
   - name: Azure-översikt
@@ -224,9 +220,9 @@ items:
     href: support-aml-studio.md
   - name: Jämför våra ML-produkter
     href: ../service/overview-more-machine-learning.md
-ms.openlocfilehash: 585310705bebbceb0aa4576977ef096704d87483
-ms.sourcegitcommit: 9999fe6e2400cf734f79e2edd6f96a8adf118d92
+ms.openlocfilehash: 12fa71315c1cb43570505d2428804f4a5348a266
+ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/22/2019
-ms.locfileid: "54424793"
+ms.lasthandoff: 01/29/2019
+ms.locfileid: "55156096"
