--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -31,12 +31,6 @@ items:
   items:
   - name: Migrera från v2 till v3
     href: migrate-from-v2-to-v3.md
-  - name: Konton
-    items:
-    - name: Kvoter och begränsningar
-      href: limits-quotas-constraints.md
-    - name: Lagringskonton
-      href: storage-account-concept.md
   - name: Entiteter
     href: entities-overview.md
     items:
@@ -44,9 +38,9 @@ items:
       href: filters-dynamic-manifest-overview.md
     - name: Tillgångar
       href: assets-concept.md
-    - name: Principer för innehållsnycklar
+    - name: Viktiga innehållsprinciper
       href: content-key-policy-concept.md
-    - name: LiveEvents och LiveOutputs
+    - name: Livehändelser och liveresultat
       href: live-events-outputs-concept.md
     - name: Slutpunkter för direktuppspelning
       href: streaming-endpoint-concept.md
@@ -63,13 +57,6 @@ items:
       href: media-encoder-standard-formats.md
     - name: Generera anpassningsbar bithastighetsstege automatiskt
       href: autogen-bitrate-ladder.md
-  - name: Hantera Event Grid-händelser
-    href: reacting-to-media-services-events.md
-  - name: Skydda innehåll
-    href: content-protection-overview.md
-    items:
-    - name: Multi-DRM-system med åtkomstkontroll
-      href: design-multi-drm-system-with-access-control.md
   - name: Analysera innehåll
     href: analyzing-video-audio-files-concept.md
   - name: Direktuppspelning av händelser
@@ -85,8 +72,23 @@ items:
       href: live-event-states-billing.md
     - name: Svarstid
       href: live-event-latency.md
-  - name: Azure Media Player
+  - name: Övervakning
+    items:
+    - name: Event Grid
+      href: reacting-to-media-services-events.md
+  - name: Skydda innehåll
+    href: content-protection-overview.md
+    items:
+    - name: Multi-DRM-system med åtkomstkontroll
+      href: design-multi-drm-system-with-access-control.md
+  - name: Spela upp
     href: use-azure-media-player.md
+  - name: Konton
+    items:
+    - name: Kvoter och begränsningar
+      href: limits-quotas-constraints.md
+    - name: Lagringskonton
+      href: storage-account-concept.md
 - name: Instruktionsguider
   items:
   - name: Kom igång
@@ -203,9 +205,9 @@ items:
     href: frequently-asked-questions.md
   - name: Azure-moln och -regioner
     href: azure-clouds-regions.md
-ms.openlocfilehash: dfafe49ba2f520bdc44c5a3e3cad0201d6e56da5
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
+ms.openlocfilehash: c5c099f346cffabc6f925609f27ff9cab7dd155e
+ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54810864"
+ms.lasthandoff: 01/28/2019
+ms.locfileid: "55095880"
