--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -13,9 +13,9 @@ items:
     href: search-create-service-portal.md
   - name: Portalen
     items:
-    - name: Importera, indexera och fråga med hjälp av verktyg
+    - name: Genomgång av portalbaserad import, index och frågor
       href: search-get-started-portal.md
-    - name: Kognitiv sökning
+    - name: Förbättra med AI (kognitiv sökning)
       href: cognitive-search-quickstart-blob.md
   - name: .NET
     items:
@@ -52,6 +52,10 @@ items:
   items:
   - name: Azure-kodexempel
     href: https://azure.microsoft.com/resources/samples/?service=search
+- name: Utbildning
+  items:
+  - name: Kunskapsutvinning – fördjupningskurs
+    href: https://azure.github.io/LearnAI-KnowledgeMiningBootcamp/
 - name: Begrepp
   items:
   - name: Fulltextsökning
@@ -146,6 +150,10 @@ items:
       href: https://docs.microsoft.com/rest/api/searchservice/add-scoring-profiles-to-a-search-index
     - name: Synonymer
       href: search-synonyms.md
+    - name: Modeller med relationsdata
+      href: search-example-adventureworks-modeling.md
+    - name: Modellera flernivåfasetter
+      href: search-example-adventureworks-multilevel-faceting.md
   - name: Läsa in och uppdatera data
     items:
     - name: Översikt över dataimport
@@ -289,9 +297,9 @@ items:
     href: https://azure.microsoft.com/pricing/details/search/
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=search
-ms.openlocfilehash: 73d7949b65333b95a9431797b2f82e8947bba8b2
-ms.sourcegitcommit: b4755b3262c5b7d546e598c0a034a7c0d1e261ec
+ms.openlocfilehash: e65adf41bc6555e8e2bcd74be07e6a1b2b96514d
+ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/24/2019
-ms.locfileid: "54888081"
+ms.lasthandoff: 01/29/2019
+ms.locfileid: "55203835"
