--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -9,6 +9,8 @@ items:
     href: sql-database-paas-vs-sql-server-iaas.md
 - name: Snabbstarter
   items:
+  - name: Snabbstartsguide för enkel databas
+    href: sql-database-quickstart-guide.md
   - name: Snabbstartsguide för hanterad instans
     href: sql-database-managed-instance-quickstart-guide.md
   - name: Skapa
@@ -121,7 +123,7 @@ items:
     items:
     - name: Översikt över enkel databas
       href: sql-database-single-index.yml
-    - name: Skapa och hantera
+    - name: Referens för API för hantering
       href: sql-database-single-databases-manage.md
     - name: Logiska servrar
       items:
@@ -131,8 +133,6 @@ items:
         href: sql-database-resource-limits-logical-server.md
       - name: Anslutningsarkitektur
         href: sql-database-connectivity-architecture.md
-      - name: T-SQL-skillnader
-        href: sql-database-transact-sql-information.md
     - name: Elastiska pooler
       items:
       - name: Elastiska pooler
@@ -151,6 +151,8 @@ items:
       href: sql-database-dtu-resource-limits-single-databases.md
     - name: Skala resurser
       href: sql-database-single-database-scale.md
+    - name: T-SQL-skillnader
+      href: sql-database-transact-sql-information.md
   - name: Hanterade instanser
     items:
     - name: Översikt över hanterade instanser
@@ -690,9 +692,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: a991b2f6a7ac90d38c653b4daf12948b1b800638
-ms.sourcegitcommit: 58dc0d48ab4403eb64201ff231af3ddfa8412331
+ms.openlocfilehash: 7d7e85b3a7934b03395960d5dcbdc1141f0effd8
+ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/26/2019
-ms.locfileid: "55078210"
+ms.lasthandoff: 01/28/2019
+ms.locfileid: "55101099"
