--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -175,11 +175,11 @@ items:
       href: vpn-gateway-delete-vnet-gateway-powershell.md
   - name: Gateway-SKU:er (äldre)
     href: vpn-gateway-about-skus-legacy.md
-  - name: Konfigurera VPN-enheter från tredje part
+  - name: Konfigurera VPN-enheter
     items:
     - name: Översikt och Azure-konfiguration
       href: vpn-gateway-3rdparty-device-config-overview.md
-    - name: 'Exempel: Cisco ASA-enhet (IKEv2/no BGP)'
+    - name: 'Exempel: Cisco ASA-enhet (IKEv2/inget BGP)'
       href: vpn-gateway-3rdparty-device-config-cisco-asa.md
   - name: Felsöka
     href: vpn-gateway-troubleshoot.md
@@ -252,9 +252,9 @@ items:
     href: https://azure.microsoft.com/support/legal/sla
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=vpn-gateway
-ms.openlocfilehash: aa9cb293365a6a2ec20e2d9ce0423310b59c5314
-ms.sourcegitcommit: dbfd977100b22699823ad8bf03e0b75e9796615f
+ms.openlocfilehash: 0917b0d30244cc6b00df71a3ed17ead22db35c99
+ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/30/2018
-ms.locfileid: "50242083"
+ms.lasthandoff: 01/29/2019
+ms.locfileid: "55159548"
