--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -79,8 +79,12 @@ items:
       href: ../dms/tutorial-sql-server-to-azure-sql.md?toc=/azure/sql-database/toc.json
     - name: Migrera till en hanterad instans med DMS
       href: ../dms/tutorial-sql-server-to-managed-instance.md?toc=/azure/sql-database/toc.json
-  - name: Skydda din databas
-    href: sql-database-security-tutorial.md
+  - name: Säkerhet i Azure SQL Database
+    items:
+    - name: Säkerhet för enkel databas
+      href: sql-database-security-tutorial.md
+    - name: Säkerhet för hanterad instans med Azure AD-inloggningar
+      href: sql-database-managed-instance-aad-security-tutorial.md
   - name: Implementera en geo-distribuerad databas
     href: sql-database-implement-geo-distributed-database.md
   - name: Konfigurera Azure SQL Data Sync
@@ -692,9 +696,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: 7d7e85b3a7934b03395960d5dcbdc1141f0effd8
-ms.sourcegitcommit: eecd816953c55df1671ffcf716cf975ba1b12e6b
+ms.openlocfilehash: b69adc5f54e2566f62049225ccb0fc438a33ca6e
+ms.sourcegitcommit: 95822822bfe8da01ffb061fe229fbcc3ef7c2c19
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/28/2019
-ms.locfileid: "55101099"
+ms.lasthandoff: 01/29/2019
+ms.locfileid: "55226816"
