--- a/articles/machine-learning/studio/index.yml
+++ b/articles/machine-learning/studio/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: a4ceaec8c71d4c13a18c8e28cc057b4b6d5337d5
-ms.sourcegitcommit: 98645e63f657ffa2cc42f52fea911b1cdcd56453
+ms.openlocfilehash: 52ac3f12fac5de3bbb772d943ea1bada5c18c1eb
+ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54812513"
+ms.lasthandoff: 01/31/2019
+ms.locfileid: "55453458"
 documentType: LandingData
 title: Dokumentation om Machine Learning Studio
 metadata:
@@ -12,7 +12,7 @@ metadata:
   description: Machine Learning Studio är ett dra-och-släpp-verktyg där flera användare kan samarbeta för att bygga, testa och distribuera prediktiva analyslösningar utifrån dina data. Självstudier, videor och exempelmodeller visar hur du använder Studio för att skapa och distribuera Machine Learning-modeller.
   services: machine-learning
   ms.service: machine-learning
-  ms.component: studio
+  ms.subservice: studio
   ms.topic: landing-page
   author: j-martens
   ms.author: jmartens
