--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -21,7 +21,7 @@ items:
       href: sql-database-managed-instance-get-started.md
   - name: Konfigurera
     items:
-    - name: Brandväggsregler för SQL Database-server
+    - name: Brandväggsregler för databasserver
       href: sql-database-get-started-portal-firewall.md
     - name: VM-klientanslutning till en hanterad instans
       href: sql-database-managed-instance-configure-vm.md
@@ -127,12 +127,20 @@ items:
     items:
     - name: Översikt över enkel databas
       href: sql-database-single-index.yml
-    - name: SQL Database-servrar
+    - name: Funktioner för enkel databas
+      href: sql-database-single-database.md
+    - name: Referens för API för hantering
+      href: sql-database-single-databases-manage.md
+    - name: T-SQL-skillnader
+      href: sql-database-transact-sql-information.md
+    - name: Databasservrar och resurser
       items:
       - name: Översikt över databasserver
         href: sql-database-servers.md
       - name: Resursbegränsningar för databasserver
         href: sql-database-resource-limits-database-server.md
+      - name: Anslutningsarkitektur
+        href: sql-database-connectivity-architecture.md
     - name: Resurser för enkla databaser
       items:
       - name: vCore-baserade resursbegränsningar
@@ -141,12 +149,6 @@ items:
         href: sql-database-dtu-resource-limits-single-databases.md
       - name: Skala resurser
         href: sql-database-single-database-scale.md
-    - name: Skapa och hantera servrar och databaser
-      href: sql-database-single-databases-manage.md
-    - name: Anslutningsarkitektur
-      href: sql-database-connectivity-architecture.md
-    - name: T-SQL-skillnader
-      href: sql-database-transact-sql-information.md
   - name: Elastiska pooler
     items:
     - name: Elastiska pooler
@@ -223,7 +225,7 @@ items:
         href: sql-vulnerability-assessment.md
       - name: Hotidentifiering
         href: sql-database-threat-detection-overview.md
-    - name: Brandväggsregler
+    - name: Brandväggsregler för databasservers IP-adress
       items:
       - name: Skapa och hantera
         href: sql-database-firewall-configure.md
@@ -241,9 +243,9 @@ items:
       href: sql-database-aad-authentication.md
     - name: Granskning
       items:
-      - name: Granskning – servrar, pooler och databaser
+      - name: Granskning – enkla databaser och elastiska pooler
         href: sql-database-auditing.md
-      - name: Granskning – Hanterad instans
+      - name: Granskning – hanterad instans
         href: sql-database-managed-instance-auditing.md
       - name: Tabellgranskning (inaktuellt)
         href: sql-database-auditing-and-dynamic-data-masking-downlevel-clients.md
@@ -662,6 +664,8 @@ items:
       href: /sql/connect/odbc/microsoft-odbc-driver-for-sql-server
 - name: Resurser
   items:
+  - name: Ordlista
+    href: sql-database-glossary-terms.md
   - name: Utveckla dina färdigheter med Microsoft Learn
     href: /learn/browse/?products=azure-sql-database
   - name: Azure-översikt
@@ -700,9 +704,9 @@ items:
       href: sql-database-elastic-jobs-getting-started.md
     - name: Avinstallera elastiskt jobb (inaktuellt)
       href: sql-database-elastic-jobs-uninstall.md
-ms.openlocfilehash: 0c34894ea3a09a4cd630938a045e0ab78681c10f
-ms.sourcegitcommit: 698a3d3c7e0cc48f784a7e8f081928888712f34b
+ms.openlocfilehash: 7530d0926cca2b89e532407d32e394e0b3018a60
+ms.sourcegitcommit: fea5a47f2fee25f35612ddd583e955c3e8430a95
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 01/31/2019
-ms.locfileid: "55471036"
+ms.locfileid: "55512422"
