--- a/articles/cognitive-services/Bing-Video-Search/index.yml
+++ b/articles/cognitive-services/Bing-Video-Search/index.yml
@@ -1,15 +1,15 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 1ff0b711e2c839f81f7f3b68603c2b9e46092316
-ms.sourcegitcommit: d3200828266321847643f06c65a0698c4d6234da
+ms.openlocfilehash: 7f462bf635eeec0e7a7eba4467aa2567fc09cb83
+ms.sourcegitcommit: ba035bfe9fab85dd1e6134a98af1ad7cf6891033
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/29/2019
-ms.locfileid: "55152968"
+ms.lasthandoff: 02/01/2019
+ms.locfileid: "55562410"
 documentType: LandingData
-title: Dokumentation om videosökning i Bing
+title: Dokumentation om API för videosökning i Bing
 metadata:
-  title: Dokumentation om videosökning i Bing – Självstudier, snabbstarter, API-referenser | Microsoft Docs
-  description: Lär dig att använda API för videosökning i Bing för att hämta resultat från webben som är relevanta för användarfrågor. Självstudier visar hur du skapar appar som använder tjänsten.
+  title: Dokumentation om API för videosökning i Bing – Självstudier, snabbstarter, API-referenser | Microsoft Docs
+  description: Lär dig hur du använder API:et för videosökning i Bing och hitta videor på webben.
   services: cognitive-services
   author: mikedodaro
   manager: rosh
@@ -18,48 +18,69 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 11/02/2017
+  ms.date: 01/31/2019
   ms.author: v-gedod
 abstract:
-  description: API för videosökning i Bing ger funktioner som liknar Bing Videos genom att returnera sökresultat som Bing bedömer som relevanta för användarens fråga.
+  description: Med API:et för videosökning i Bing kan du integrera Bings videosökningsfunktioner i dina program. Genom att skicka sökfrågor till API:et kan du hämta och visa relevanta och högkvalitativa videor på samma sätt som på bing.com/videos.
 sections:
+- items:
+  - type: list
+    style: cards
+    className: cardsM
+    columns: 3
+    items:
+    - href: /azure/cognitive-services/bing-video-search/overview
+      html: <p>Läs mer om API:et för videosökning i Bing</p>
+      image:
+        src: ../media/index/i_overview.svg
+      title: Vad är API:et för videosökning i Bing?
+    - href: /azure/cognitive-services/bing-video-search/concepts/sending-requests
+      html: <p>Lär dig att skicka videosökningsfrågor till Bing</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Skicka sökfrågor
+    - href: /azure/cognitive-services/bing-image-search/concepts/bing-image-search-get-images
+      html: <p>Lär dig att filtrera sökresultat, hämta videominiatyrer, utöka sökfrågor</p>
+      image:
+        src: ../media/index/i_guidelines.svg
+      title: Hämta videor från webben
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Kom igång med API för videosökning i Bing genom att skapa en fråga och visa JSON-svaret:'
+    text: 'Sök på webben efter videor med hjälp av:'
   - type: list
     style: icon48
     items:
     - image:
         src: media/index/logo_csharp.svg
-      href: csharp
+      href: quickstarts/sdk-csharp-quickstart
       text: C&#35;
     - image:
         src: media/index/logo_java.svg
-      href: java
+      href: quickstarts/sdk-java-quickstart
       text: Java
     - image:
         src: media/index/logo_nodejs.svg
-      href: nodejs
+      href: quickstarts/nodejs
       text: Node.js
     - image:
         src: media/index/logo_php.svg
-      href: php
+      href: quickstarts/php
       text: PHP
     - image:
         src: media/index/logo_python.svg
-      href: python
+      href: quickstarts/sdk-python-quickstart
       text: Python
     - image:
         src: media/index/logo_ruby.svg
-      href: ruby
+      href: quickstarts/ruby
       text: Ruby
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
     text: 'Utveckla program med hjälp av API för videosökning i Bing:'
   - type: paragraph
-    text: <a href="tutorial-bing-video-search-single-page-app">Enkelsidig webbapp</a> &#124; <a href="tutorial-bing-video-search-single-page-app-source">Källkod</a>
+    text: <a href="tutorial-bing-video-search-single-page-app">Enkelsidig webbapp</a>
 - title: Exempel
   items:
   - type: paragraph
