--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -104,6 +104,12 @@ items:
       href: concepts-connectivity.md
     - name: Utveckla med Azure Kubernetes Service (AKS)
       href: concepts-aks.md
+    - name: Java
+      items:
+      - name: Konfigurera Spring Data JDBC
+        href: /java/azure/spring-framework/configure-spring-data-jdbc-with-azure-postgresql
+      - name: Konfigurera Spring Data JPA
+        href: /java/azure/spring-framework/configure-spring-data-jpa-with-azure-postgresql
   - name: Replikering
     items:
     - name: Skrivskyddade repliker
@@ -230,9 +236,9 @@ items:
     href: partners-migration-postgresql.md
   - name: Guide för databasmigrering
     href: https://datamigration.microsoft.com/
-ms.openlocfilehash: 61b78ac5b542e130fd7182b0c30810ff9c98ee78
-ms.sourcegitcommit: ba9f95cf821c5af8e24425fd8ce6985b998c2982
+ms.openlocfilehash: e391ae71e7b840fc372f9b6116bab486845f92e6
+ms.sourcegitcommit: ba035bfe9fab85dd1e6134a98af1ad7cf6891033
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 01/17/2019
-ms.locfileid: "54383036"
+ms.lasthandoff: 02/01/2019
+ms.locfileid: "55567238"
