--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -304,6 +304,8 @@ items:
     items:
     - name: Kopiera data med Kopiera aktivitet
       href: copy-activity-overview.md
+    - name: Ta bort filer med hjälp av Ta bort aktivitet
+      href: delete-activity.md
     - name: Kopiera data-verktyg
       href: copy-data-tool.md
     - name: Läs in Data Lake Storage Gen2
@@ -458,8 +460,22 @@ items:
       href: how-to-create-schedule-trigger.md
     - name: Skapa en utlösare för rullande fönster
       href: how-to-create-tumbling-window-trigger.md
+    - name: Skapa ett beroende för utlösare för rullande fönster
+      href: tumbling-window-trigger-dependency.md
     - name: Skapa en händelsebaserad utlösare
       href: how-to-create-event-trigger.md
+  - name: Mallar
+    items:
+    - name: Översikt över mallar
+      href: solution-templates-introduction.md
+    - name: Kopiera filer från flera containrar
+      href: solution-template-copy-files-multiple-containers.md
+    - name: Masskopiera med kontrolltabellen
+      href: solution-template-bulk-copy-with-control-table.md
+    - name: Deltakopiera med kontrolltabellen
+      href: solution-template-delta-copy-with-control-table.md
+    - name: Transformera data med Databricks
+      href: solution-template-databricks-notebook.md
 - name: Referens
   items:
   - name: .NET
@@ -490,9 +506,9 @@ items:
     href: https://azure.microsoft.com/global-infrastructure/services/
   - name: Supportalternativ
     href: https://azure.microsoft.com/support/options/
-ms.openlocfilehash: fd664db6e5f4bfbf0a86d9984559a1e5eabf262d
-ms.sourcegitcommit: ba035bfe9fab85dd1e6134a98af1ad7cf6891033
+ms.openlocfilehash: c73a736dadee91f344da32fb5569d5809a382f1b
+ms.sourcegitcommit: d1c5b4d9a5ccfa2c9a9f4ae5f078ef8c1c04a3b4
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 02/01/2019
-ms.locfileid: "55567255"
+ms.lasthandoff: 02/08/2019
+ms.locfileid: "55960249"
